<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical"
    tools:context=".LoginFragment">

    <ImageView
        android:id="@+id/banner"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/fkom_white"
        android:contentDescription="@string/fkom_banner"
        android:scaleType="fitXY" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/fkom"
        android:textColor="@color/white" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="-20dp"
        app:cardCornerRadius="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:text="@string/username"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/username_text"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:autofillHints="username"
                android:background="@drawable/field_shape"
                android:inputType="text"
                tools:ignore="LabelFor" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:text="@string/email"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/email_text"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:autofillHints="emailAddress"
                android:background="@drawable/field_shape"
                android:inputType="textEmailAddress"
                tools:ignore="LabelFor" />


            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:text="@string/password"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/password_text"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:autofillHints="password"
                android:background="@drawable/field_shape"
                android:inputType="textPassword"
                tools:ignore="LabelFor" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/login_action"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/button_shape"
                android:text="@string/register_btn"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="40dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:alpha="0.7"
                android:text="@string/or_sign_up"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/google_logo"
                    android:contentDescription="@string/google_logo" />

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="50dp"
                    android:background="@drawable/twitter_logo"
                    android:contentDescription="@string/twitter_logo" />

                <ImageView
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:background="@drawable/apple_logo"
                    android:contentDescription="@string/apple_logo" />

            </LinearLayout>


        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>